split flownarios.js into client and server files as flownarios.html cannot import node:fs. inputs and constants now live in the client file as it can be used by server. Updated references throughout other scripts.

--- a/scripts/flownarios.html
+++ b/scripts/flownarios.html
@@ -84,10 +84,10 @@
     </div>
     <script src="./flownarioData.js" type="module" defer></script>
 
-    <script src="./flownarios.js" type="module" defer></script>
+    <script src="./flownarios-client.js" type="module" defer></script>
 
     <script defer type="module">
-      import { createFormFields, howManyRemain } from "./flownarios.js";
+      import { createFormFields, howManyRemain } from "./flownarios-client.js";
       createFormFields();
       howManyRemain();
     </script>
