changed html page to index and added functionality to capture URL params to make for easier bookmarking and link sharing. Finalized README to explain how to run the experiment as well as what it does.

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -87,9 +87,11 @@
     <script src="./flownarios-client.js" type="module" defer></script>
 
     <script defer type="module">
-      import { createFormFields, howManyRemain } from "./flownarios-client.js";
+      import { addSelectBoxListener, consumeUrlParams, createFormFields, howManyRemain } from "./flownarios-client.js";
       createFormFields();
       howManyRemain();
+      addSelectBoxListener();
+      consumeUrlParams();
     </script>
   </body>
 </html>
